Made a jwt auth. Working with expired ones as well

--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Авторизация</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!--  Need to refactor so it takes fonts from project instead of a site-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/auth.css">
 </head>
 
@@ -21,9 +23,8 @@
     </form>
 </div>
 
-<!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script th:src="@{/js/auth.js}"></script>-->
 <script src="/js/ajax-3.4.1.js"></script>
 <script src="/js/auth.js"></script>
+
 </body>
 </html>
